# RxSimex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_utils.cmake  initialize_path.m  playground.cpp
docs/: create_new_block.md
examples/data_exchange/: CMakeLists.txt  communication.py  data_exchange.cpp  data_exchange_model.slx
examples/simple/: CMakeLists.txt  simple.cpp  simple_model.slx
include/: h5_memory_file.h  port.h  rx_block.h  rx_param.h  rx_port.h  rx_remote_block.h  rx_simex.h  sample_time_t.h  utils.h  version.h
src/: bridge.c  bridge.cpp  rx_block.cpp
