cmake_minimum_required(VERSION 3.14)
project(RxSimex)

find_package(Matlab REQUIRED)
include(cmake_utils.cmake)

set(CMAKE_CXX_STANDARD 17)
set(Simulink_DIR ${Matlab_ROOT_DIR}/simulink)

include_directories(include)
include_directories(include/RxCpp/Rx/v2/src/rxcpp)
include_directories(include/xtensor/include)
include_directories(include/xtensor-io/include)
include_directories(include/xtl/include)
include_directories(include/fmt/include)
include_directories(include/HighFive/include)
include_directories(include/msgpack-c/include)
include_directories(${Matlab_INCLUDE_DIRS})
include_directories(${Simulink_DIR}/include)

if (${ENABLE_HDF5})
    add_compile_definitions(ENABLE_HDF5)
    set (HDF5_USE_STATIC_LIBRARIES TRUE)
    find_package(HDF5 REQUIRED)
    include_directories(${HDF5_INCLUDE_DIRS})
endif()
if (${ENABLE_REMOTE})
    add_subdirectory(include/brynet)
    include_directories(include/brynet/src)
    set(BRYNET_LIB brynet)
endif()

add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
add_compile_definitions(S_FUNCTION_LEVEL=2)
if (WIN32)
    add_compile_definitions(_WIN32_WINNT=0x0601)
endif ()

file(GLOB_RECURSE RXSIMEX_SOURCES src/*.c src/*.cpp)
file(GLOB FMT_SOURCES include/fmt/src/*.cc)

set(_SOURCES ${RXSIMEX_SOURCES} ${FMT_SOURCES})
set(_LIBS ${HDF5_LIBRARIES} ${BRYNET_LIB} ${HDF5_LIBRARIES})

if (${ENABLE_EXAMPLES})
    file(GLOB EXAMPLE_DIRS LIST_DIRECTORIES true examples/*)
    foreach (EXAMPLE_DIR ${EXAMPLE_DIRS})
        if (IS_DIRECTORY ${EXAMPLE_DIR})
            message(Adding example: ${EXAMPLE_DIR})
            add_subdirectory(${EXAMPLE_DIR})
        endif ()
    endforeach ()
endif ()
